--- a/app/src/main/res/layout/fragment_word_list.xml
+++ b/app/src/main/res/layout/fragment_word_list.xml
@@ -1,102 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingStart="16dp"
+    android:paddingTop="16dp"
+    android:paddingEnd="16dp"
     tools:context=".ui.vocabulary.WordListFragment">
 
-<!--    <com.google.android.material.appbar.AppBarLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content">-->
-
-<!--        <com.google.android.material.appbar.MaterialToolbar-->
-<!--            android:id="@+id/top_app_bar"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="?attr/actionBarSize"-->
-<!--            app:layout_scrollFlags="scroll|enterAlways|snap"-->
-<!--            app:menu="@menu/sort_words_menu"-->
-<!--            app:title="@string/vocabulary_tab" />-->
-
-<!--        <com.google.android.material.tabs.TabLayout-->
-<!--            android:id="@+id/vocabulary_tabs"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_scrollFlags="scroll|enterAlways|snap"-->
-<!--            app:tabInlineLabel="true"-->
-<!--            app:tabMode="fixed">-->
-
-<!--            <com.google.android.material.tabs.TabItem-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:icon="@drawable/ic_order_alphabetical_24"-->
-<!--                android:text="@string/my_words_tab" />-->
-
-<!--            <com.google.android.material.tabs.TabItem-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:icon="@drawable/ic_sets_24"-->
-<!--                android:text="@string/my_sets_tab" />-->
-
-<!--        </com.google.android.material.tabs.TabLayout>-->
-
-<!--    </com.google.android.material.appbar.AppBarLayout>-->
-
-    <LinearLayout
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/word_search"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingTop="16dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/rounded_corners"
+        android:textCursorDrawable="@null"
+        app:iconifiedByDefault="false"
+        app:queryBackground="@null"
+        app:queryHint="@string/search_words_hint" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:paddingBottom="55dp"
+        tools:listitem="@layout/item_view" />
+
+    <Button
+        android:id="@+id/search_in_dictionary"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/rounded_corners"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
         android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="50dp">
-
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/word_search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/rounded_corners"
-            android:textCursorDrawable="@null"
-            app:iconifiedByDefault="false"
-            app:queryBackground="@null"
-            app:queryHint="@string/search_words_hint"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clipToPadding="false"
-            tools:listitem="@layout/item_view" />
-
-        <Button
-            android:id="@+id/search_in_dictionary"
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/rounded_corners"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:paddingStart="16dp"
-            android:paddingTop="5dp"
-            android:paddingEnd="10dp"
-            android:paddingBottom="8dp"
-            android:text="@string/search_in_dictionary_inline"
-            android:textAllCaps="false"
-            android:textColor="@color/color_white"
-            android:textSize="15sp"
-            android:visibility="gone"
-            app:backgroundTint="@null" />
-    </LinearLayout>
-
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/add_new_word_btn"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="end|bottom"-->
-<!--        android:layout_margin="16dp"-->
-<!--        android:contentDescription="@string/submit"-->
-<!--        app:srcCompat="@drawable/ic_add_24"-->
-<!--        app:tint="@color/color_black" />-->
-
-</FrameLayout>
+        android:paddingTop="5dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="8dp"
+        android:text="@string/search_in_dictionary_inline"
+        android:textAllCaps="false"
+        android:textColor="@color/color_white"
+        android:textSize="15sp"
+        android:visibility="gone"
+        app:backgroundTint="@null" />
+</LinearLayout>
